compiler/testData/diagnostics/tests/modifiers/redundantTargets.kt
<!REDUNDANT_MODIFIER_FOR_TARGET!>open<!> interface First
// Now inspection
abstract interface Second
// Now inspection
final enum class Third {
    FOURTH, 
    FIFTH
}
// Now inspection
final object Sixth